# DB_coursework

./: .$er_диаграмма.drawio.bkp  README.md
data/: DBMaker.sql
docs/: 00-settings.tex  01-title.aux  01-title.tex  02-contents.aux  02-contents.tex  03-introduction.aux  03-introduction.tex  10-analysis.aux  10-analysis.tex  11-design.aux  11-design.tex  12-technology.aux  12-technology.tex  13-exploration.aux  13-exploration.tex  14-summary.aux  14-summary.tex  20-references.aux  20-references.tex  lab_01.aux  lab_01.out  lab_01.tex  lab_01.toc
img/: .$calculate_tube_length_on_edge.drawio.bkp  .$calculate_tube_length_on_segment.drawio.bkp  .$er_диаграмма.drawio.bkp  .$er_диаграмма_2.drawio.bkp  .$update_tube_length_on_segment.drawio.bkp  .$use-case.drawio.bkp  calculate_tube_length_on_edge.drawio  calculate_tube_length_on_segment.drawio  er_диаграмма.drawio  er_диаграмма_2.drawio  update_tube_length_on_segment.drawio  use-case.drawio
ramus/: idef0_bd.rsf
report/: 00-settings.tex  01-title.aux  01-title.tex  02-contents.aux  02-contents.tex  03-introduction.aux  03-introduction.tex  10-analysis.aux  10-analysis.tex  11-design.tex  12-technology.tex  13-exploration.tex  14-summary.tex  20-references.aux  20-references.tex  report.aux  report.out  report.tex  report.toc
src/kr_kg/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  deformationengine.cpp  deformationengine.h  deformationpoint.cpp  deformationpoint.h  edge.cpp  edge.h  grideditor.cpp  grideditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  point3d.cpp  point3d.h  section.cpp  section.h  sectionframe.cpp  sectionframe.h  sectionview.cpp  sectionview.h  segment.cpp  segment.h  tube.cpp  tube.h  tuberepository.cpp  tuberepository.h  tubeviewer.cpp  tubeviewer.h
